--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node dist/app.js",
     "watch": "tsc -w",
-    "dev": "nodemon src/app.ts",
-    "build": "rimraf ./dist && tsc"
+    "dev": "NODE_ENV=development nodemon src/app.ts",
+    "build": "rimraf ./dist && tsc",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "hakifred",
@@ -15,17 +17,27 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
   }
