added husky precommit to gihut workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,12 @@ jobs:
 
       - name: check build.
         run: yarn build
+      
+      - name: Set up Husky
+        run: npx husky install .husky
+
+      - name: Configure pre-commit hook
+        run: npx husky add .husky/pre-commit "yarn lint-staged"
+        run: npx husky add .husky/pre-commit "yarn test"
 
 
