--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
